assets/css/style-default-page.scss
.page {
    min-height: 100vh;
    padding: 200px 100px 100px 100px;
    @media screen and (max-width: 768px) {
        padding: 125px 10px 50px 10px;
    }
    display: flex;
    justify-content: center;
    background-color: var(--white);
    .content {
        max-width: 75ch;
        a {
            color: var(--logo-magenta);
            text-decoration: none;
            overflow-wrap: anywhere;
            &:hover {
                color: var(--logo-green);
                text-decoration: underline;
            }
        }
        .doc-qr {
            margin-top: 25px;
        }
        .links {
            margin-top: 25px;
        }
    }
}

